--- a/index.html
+++ b/index.html
@@ -3,7 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>我的个人网站</title>
+    <meta name="description" content="个人作品集和简历展示，包含前端开发项目、技能展示和联系方式。" />
+    <meta name="keywords" content="前端开发,个人网站,作品集,简历,Vue.js,JavaScript" />
+    <meta name="author" content="我的姓名" />
+    <meta property="og:title" content="我的个人网站" />
+    <meta property="og:description" content="个人作品集和简历展示，包含前端开发项目、技能展示和联系方式。" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://example.com" />
+    <meta property="og:image" content="/src/assets/images/avatar.jpg" />
+    <link rel="canonical" href="https://example.com" />
+    <title>我的个人网站 - 前端开发作品集</title>
+    
+    <!-- 结构化数据 -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "我的姓名",
+      "jobTitle": "前端开发工程师",
+      "description": "专注于Web前端开发的工程师，精通Vue.js、JavaScript等技术。",
+      "url": "https://example.com",
+      "image": "/src/assets/images/avatar.jpg",
+      "sameAs": [
+        "https://github.com/username",
+        "https://linkedin.com/in/username"
+      ],
+      "worksFor": {
+        "@type": "Organization",
+        "name": "我的公司"
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "城市名称",
+        "addressRegion": "省份名称",
+        "addressCountry": "中国"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="app"></div>
